- adjusted overlapping sphere issue

--- a/sphere.css
+++ b/sphere.css
@@ -675,6 +675,13 @@
   display: none;
 }
 
+@media (max-width: 1305px) and (min-width: 650px) {
+  .ballDiv10 {
+ display: none;
+  }
+
+
+}
 
 @media only screen and (max-width: 650px) {
 
